@@ -1,3 +1,4 @@
 [ContactUsMgr]
 requiresAuth    = false
 logContacts     = true
+useCaptcha      = true
